--- a/src/view/report_template.html
+++ b/src/view/report_template.html
@@ -3,6 +3,7 @@
   <head>
     <title>Test report - Code Tagger</title>
     <link href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css" rel="stylesheet">
+    <style>###css###</style>
     <link href="../src/view/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -15,6 +16,6 @@
     <div id="data-table"></div>
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
     <script type="text/javascript">const reportData=###data###</script>
-    <script type="text/javascript" src="../src/view/report.js"></script>
+    <script type="text/javascript">###js###</script>
   </body>
 </html>
