--- a/src/view/report_template.html
+++ b/src/view/report_template.html
@@ -3,7 +3,7 @@
   <head>
     <title>Test report - Code Tagger</title>
     <link href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css" rel="stylesheet">
-    <style>###css###</style>
+    ###css###
     <link href="../src/view/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -15,7 +15,7 @@
     </div>
     <div id="data-table"></div>
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
-    <script type="text/javascript">const reportData=###data###</script>
-    <script type="text/javascript">###js###</script>
+    ###data###
+    ###js###
   </body>
 </html>
