--- a/src/view/styles.css
+++ b/src/view/styles.css
@@ -54,6 +54,10 @@ button:hover {
   border-radius: 5px;
 }
 
+.tag-auto {
+  background-color: red;
+}
+
 .tabulator-cell {
   height: auto !important;
 }
