Added control on report to consider or ignore autotags when filters are applied

--- a/src/view/report_template.html
+++ b/src/view/report_template.html
@@ -8,6 +8,12 @@
   <body>
     <div id="table-filters">
       <form id="filter-form">
+        <div>
+          <label for="enableAutotags">
+            <input id="enableAutotags" name="enableAutotags" type="checkbox" checked />
+            Enable Autotags
+          </label>
+        </div>
         <div id="filterFields"></div>
         <div class="filterCombinationContainer">
           <label for="filterOR">
