--- a/src/view/styles.css
+++ b/src/view/styles.css
@@ -2,19 +2,42 @@
   --primary-color: rgb(72, 129, 194);
   --primary-color-higlight: rgb(105, 155, 212);
   --primary-text-color: rgba(255, 255, 255, 0.87);
+  --secondary-color: rgb(163, 163, 163);
   --select-border: #393939;
   --select-focus: #101484;
   --select-arrow: var(--select-border);
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
+
+h1 {
+  text-align: center;
+}
+
+.timestamp {
+  color: var(--secondary-color);
+  text-align: center;
+}
+
 button {
   border: none;
   padding: 0.5rem;
   background-color: var(--primary-color);
   color: var(--primary-text-color);
+}
+
+button:hover {
+  background-color: var(--primary-color-higlight);
+  cursor: pointer;
+}
+
+button.link {
+  border: none;
+  text-decoration: underline;
+  background-color: transparent;
+  color: var(--secondary-color);
 }
 
 input[type=text] {
@@ -25,15 +48,6 @@ input[type=text] {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-}
-
-button:hover {
-  background-color: var(--primary-color-higlight);
-  cursor: pointer;
-}
-.multiselect__dropdown {
-  position: relative;
-  z-index: 2;
 }
 
 .tag-container {
@@ -62,6 +76,38 @@ button:hover {
   height: auto !important;
 }
 
+.tabulator-page {
+  color: black;
+}
+
 #table-filters {
   padding: 1rem;
+}
+
+#filterFields {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+#filter-advanced {
+  border: 1px solid var(--secondary-color);
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: auto;
+  grid-gap: 1rem 1rem;
+}
+
+.advanced-row {
+  display: flex;
+  flex-direction: row;
+}
+.advanced-label {
+  grid-column: 1;
+  white-space: nowrap;
+}
+
+.advanced-content {
+  grid-column: 2;
 }
