Added skipped tests filter

--- a/src/view/report_template.html
+++ b/src/view/report_template.html
@@ -50,6 +50,14 @@
               <option value="functionality">Functionality</option>
             </select>
           </div>
+          <label class="advanced-label" for="testExecutionSelector">Show tests</label>
+          <div class="advanced-content">
+            <select id="testExecutionSelector">
+              <option value="all">All</option>
+              <option value="skipped">Skipped only</option>
+              <option value="not-skipped">Not skipped</option>
+            </select>
+          </div>
           <label class="advanced-label" for="enableAutotags">
             Enable Autotags
           </label>
