--- a/src/view/report_template.html
+++ b/src/view/report_template.html
@@ -20,52 +20,53 @@
     </div>
     <div id="table-filters">
       <form id="filter-form">
-        <div>
-          <input id="filter-input" type="text" />
-          <button id="filter-apply" type="submit">Filter</button>
-        </div>
-        <div>
-          <label for="filterOR">
-            <input type="radio" id="filterOR" name="filterCombination" value="OR" checked />
-            Any
-          </label>
-          <label for="filterAND">
-            <input type="radio" id="filterAND" name="filterCombination" value="AND" />
-            All
-          </label>
-          <button id="show-advanced-filters" class="link">Advanced filters</button>
-        </div>
-        <div id="filter-advanced" class="hidden">
-          <label class="advanced-label" for="displaySelector">Display</label>
-          <div class="advanced-content">
+        <div class="display-options">
+          <label for="displaySelector">Display
             <select id="displaySelector">
               <option value="tree">Tree</option>
               <option value="flat">Flat</option>
             </select>
-          </div>
-          <label class="advanced-label" for="groupSelector">Group by</label>
-          <div class="advanced-content">
+          </label>
+          <label for="groupSelector">Group by
             <select id="groupSelector">
               <option value="file">File</option>
               <option value="functionality">Functionality</option>
             </select>
-          </div>
-          <label class="advanced-label" for="testExecutionSelector">Show tests</label>
-          <div class="advanced-content">
+          </label>
+          <label for="testExecutionSelector">Show tests
             <select id="testExecutionSelector">
               <option value="all">All</option>
               <option value="skipped">Skipped only</option>
               <option value="not-skipped">Not skipped</option>
             </select>
-          </div>
-          <label class="advanced-label" for="enableAutotags">
-            Enable Autotags
           </label>
-          <div class="advanced-content">
-            <input id="enableAutotags" name="enableAutotags" type="checkbox" checked />
+        </div>
+        <div class="filter-options">
+          <div>
+            <input id="filter-input" type="text" />
+            <button id="filter-apply" type="submit">Filter</button>
           </div>
-          <label class="advanced-label">Target fields</label>
-          <div id="filterFields" class="advanced-content"></div>
+          <div>
+            <label for="filterOR">
+              <input type="radio" id="filterOR" name="filterCombination" value="OR" checked />
+              Any
+            </label>
+            <label for="filterAND">
+              <input type="radio" id="filterAND" name="filterCombination" value="AND" />
+              All
+            </label>
+            <button id="show-advanced-filters" class="link">Advanced filters</button>
+          </div>
+          <div id="filter-advanced" class="hidden">
+            <label class="advanced-label" for="enableAutotags">
+              Enable Autotags
+            </label>
+            <div class="advanced-content">
+              <input id="enableAutotags" name="enableAutotags" type="checkbox" checked />
+            </div>
+            <label class="advanced-label">Target fields</label>
+            <div id="filterFields" class="advanced-content"></div>
+          </div>
         </div>
       </form>
     </div>
