--- a/src/view/vue/index.html
+++ b/src/view/vue/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript">window.reportData='###data###'</script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
